# AngryBomb3D

./: .gitignore  build.gradle
app/: build.gradle  google-services.json
app/jni/: CMakeLists.txt
app/jni/src/: CMakeLists.txt  DataBaseHelper.cpp  DataBaseHelper.h  EnumsAndVariables.h  GameStateHelper.cpp  GameStateHelper.h  SendStatisticsHelper.cpp  SendStatisticsHelper.h  main.cpp
app/jni/src/bullets/: BulletSet.cpp  BulletSet.h
app/jni/src/enemies/: BaseEnemy.cpp  BaseEnemy.h
app/jni/src/maps/: BaseMap.cpp  BaseMap.h  Map0.cpp  Map0.h  Map1.cpp  Map1.h  Map10.cpp  Map10.h  Map2.cpp  Map2.h  Map3.cpp  Map3.h  Map4.cpp  Map4.h  Map5.cpp  Map5.h  Map6.cpp  Map6.h  Map7.cpp  Map7.h  Map8.cpp  Map8.h  Map9.cpp  Map9.h  MapTemplate.cpp  MapTemplate.h
app/jni/src/menus/start/: StartMenuGUILayer.cpp  StartMenuGUILayer.h
app/jni/src/playState/: PlayStateGUILayer.cpp  PlayStateGUILayer.h  PlayStateSceneLayer.cpp  PlayStateSceneLayer.h
app/jni/src/player/: Player.cpp  Player.h  PlayerBulletAirTrajectory.cpp  PlayerBulletAirTrajectory.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/models3D/bullets/: Standard_1kg.fbx
app/src/main/assets/models3D/map0/: Dynamic_1kg_0_5friction.fbx  Enemies.fbx  PlayerPoints.fbx  Static_0_5friction.fbx
app/src/main/assets/models3D/map1/: Dynamic_1kg_0_5friction.fbx  Dynamic_1kg_1friction.fbx  Enemies.fbx  PlayerPoints.fbx  Static_1friction.fbx
app/src/main/java/managers/: AdsManager.java  BillingManager.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+54 files in other folders)
